kubernetes/dev/k8s-ingress.yaml
# k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vg-hc-store-react-ingress-development
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  rules:
  - host: dev.vg-hc.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vg-hc-store-react-service-development
            port:
              number: 80
